# claudecodelad

./: .gitignore  LICENSE  README.md
.claude/: settings.local.json
.claude-plugin/: marketplace.json
plugins/date-context/: README.md
plugins/date-context/.claude-plugin/: plugin.json
plugins/date-context/hooks/: hooks.json
plugins/date-context/hooks/handlers/: inject-date.sh
plugins/md-to-gdoc/: README.md
plugins/md-to-gdoc/.claude-plugin/: plugin.json
plugins/md-to-gdoc/docs/: SETUP.md
plugins/md-to-gdoc/scripts/: create_gdoc.py  format_extractor.py  format_profile.py  md_to_gdoc.py
plugins/md-to-gdoc/skills/md-to-gdoc/: SKILL.md
plugins/notebooklm-upload/: README.md  pyproject.toml
plugins/notebooklm-upload/.claude-plugin/: plugin.json
plugins/notebooklm-upload/docs/: SETUP.md
plugins/notebooklm-upload/skills/notebooklm-upload/: SKILL.md
plugins/notebooklm-upload/src/: constants.py  main.py  uploader.py
plugins/session-finder/: README.md
plugins/session-finder/.claude-plugin/: plugin.json
plugins/session-finder/hooks/: hooks.json
plugins/session-finder/hooks/handlers/: index-session.sh
plugins/session-finder/skills/find-session/: SKILL.md
plugins/timewatch-fill/: README.md
plugins/timewatch-fill/.claude-plugin/: plugin.json
plugins/timewatch-fill/skills/timewatch-fill/: SKILL.md
plugins/worktree-manager/.claude-plugin/: plugin.json
plugins/worktree-manager/hooks/: hooks.json
plugins/worktree-manager/hooks/handlers/: detect-worktree.sh
plugins/worktree-manager/skills/merge/: SKILL.md
(+4 files in other folders)
