[project]
name = "notebooklm-upload"
version = "0.1.0"
description = "Batch upload local files to Google NotebookLM notebooks"
requires-python = ">=3.10"
dependencies = [
    "notebooklm-py>=0.3.4,<1.0.0",
    "click>=8.0.0,<9.0.0",
    "rich>=13.0.0,<14.0.0",
]

[project.scripts]
notebooklm-upload = "src.main:cli"

[tool.hatch.build.targets.wheel]
packages = ["src"]

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"
